<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:stretchColumns="*">

    <TableLayout>
        <TableRow>
            <TextView
                android:layout_width="92dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hint_phone"
                android:hint="@string/hint_phone"
                android:inputType="phone"
                android:maxLength="13" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="18sp" />
            <EditText
                android:id="@+id/address"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:autofillHints="@string/hint_address"
                android:hint="@string/hint_address"
                android:inputType="textPostalAddress" />
        </TableRow>
    </TableLayout>

    <LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>

    <TableRow>
        <TextView
            android:id="@+id/print1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="30sp" />
    </TableRow>

    <LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </LinearLayout>

    <TableRow>
        <TextView
            android:id="@+id/print2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="30sp" />
    </TableRow>

    <LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </LinearLayout>

    <TableRow>
        <TextView
            android:id="@+id/print3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="30sp" />
    </TableRow>

    <LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="35dp" />
    </LinearLayout>

    <TableRow>
        <TextView
            android:id="@+id/print_sum"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </TableRow>

    <LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="60dp" />
    </LinearLayout>

    <TableRow>
        <Button
            android:id="@+id/b2_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/purchase"
            android:textSize="7pt" />
    </TableRow>

</TableLayout>
